# sealeval

./: .gitignore  AGENTS.md  FIXES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/run1/: PROTOCOL.md  RESULTS.md  key.json  key.sealed  prereg.lock.json  reproduce_systems.py  scores.json
benchmark/run1/findings/: claude.json  claude_verdicts.json  codex.json  codex_verdicts.json  gemini.json  gemini_coverage.json  gemini_verdicts.json
benchmark/run1/transcripts/claude/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  016.md  017.md
benchmark/run1/transcripts/codex/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  016.md  017.md  018.md  019.md  020.md  021.md  022.md  023.md  024.md  025.md  026.md  027.md  028.md  029.md
benchmark/run1/transcripts/gemini/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md
benchmark/run2/: PROTOCOL.md  RESULTS.md  key.json  key.sealed  prereg.lock.json  score_run2.py  scores.json
benchmark/run2/findings/: fable5.json  fable5_verdicts_fable5.json  fable5_verdicts_gpt56sol.json  gpt56sol.json  gpt56sol_verdicts_fable5.json  gpt56sol_verdicts_gpt56sol.json
benchmark/run2/transcripts/fable5/: __init__.py.txt  _types.py.txt  adapters.py.txt  api.py.txt  auth.py.txt  compat.py.txt  cookies.py.txt  exceptions.py.txt  help.py.txt  models.py.txt  packages.py.txt  sessions.py.txt  status_codes.py.txt  structures.py.txt  utils.py.txt
benchmark/run2/transcripts/gpt56sol/: __init__.py.txt  _types.py.txt  adapters.py.txt  api.py.txt  auth.py.txt  compat.py.txt  cookies.py.txt  exceptions.py.txt  help.py.txt  models.py.txt  packages.py.txt  sessions.py.txt  status_codes.py.txt  structures.py.txt  utils.py.txt
examples/: judges.csv  verify_seal_breaks.py
src/sealeval/: __init__.py  __main__.py  cli.py  demo.py  judge.py
src/sealeval/measure/: README.md  __init__.py  confirm.py  panel.py  pilot.py  stats.py
src/sealeval/mutation/: __init__.py  catalog.py  seeder.py
src/sealeval/sealing/: __init__.py  keyseal.py  prereg.py
tests/: test_measure.py  test_sealeval.py
