[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sealeval"
version = "0.1.0"
description = "Pre-registered, sealed-ground-truth evaluation of code-analysis systems: AST mutation seeding + tamper-evident sealing + blind refute-by-default judging. Zero dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rafal Misiorski" }]
keywords = [
    "evaluation", "benchmark", "pre-registration", "mutation-testing",
    "llm-judge", "code-review", "sealed-ground-truth",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
